Bug 30952: Fix color contrast so we are at least WCAG AA compliant
Issue #10

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -5,7 +5,7 @@
 @import "fonts";
 
 ::selection {
-    background: #418940;
+    background: $background-color-primary;
     color: #FFFFFF;
 }
 
@@ -64,7 +64,7 @@ a {
     }
 
     &.clear_date {
-        color: #418940;
+        color: $green-text-color;
         font-size: 130%;
         vertical-align: middle;
 
@@ -95,14 +95,14 @@ a {
         }
 
         &:hover {
-            color: #418940;
+            color: $green-text-color;
             text-decoration: none;
             font-weight: bold;
 
             i, img {
-                border-color: #418940;
+                border-color: $background-color-primary;
                 background-color: transparent;
-                color: #418940;
+                color: $green-text-color;
             }
 
         }
@@ -403,8 +403,8 @@ aside {
             &.active > a, a:hover, a.current {
                 background-color: #F3F4F4;
                 text-decoration: none;
-                color: #418940;
-                border-left: solid 5px #418940;
+                color: $green-text-color;
+                border-left: solid 5px $background-color-primary;
                 font-weight: bold;
             }
         }
@@ -623,7 +623,7 @@ cite {
 input,
 textarea {
     &:focus {
-        border-color: #418940;
+        border-color: $background-color-primary;
         border-radius: 4px;
     }
 }
@@ -1523,7 +1523,7 @@ i {
     }
 
     &.success {
-        color: #418940;
+        color: $green-text-color;
     }
 
     &.warn {
@@ -1791,7 +1791,7 @@ i {
     background-color: #FEC32C;
     i {
         &.fa {
-            color: #418940;
+            color: $green-text-color;
         }
     }
 }
@@ -2670,7 +2670,7 @@ td.bundle {
 .ui-widget-content {
     background: #FFFFFF none;
     border-radius: 4px;
-    border: 3px solid #418940;
+    border: 3px solid $background-color-primary;
     color: #222222;
 }
 
@@ -2784,7 +2784,7 @@ td.bundle {
     .ui-tabs-panel {
         background: #FFF none;
         border-radius: 4px;
-        border: 3px solid #418940;
+        border: 3px solid $background-color-primary;
 
         fieldset {
             box-shadow: none;
@@ -2798,17 +2798,15 @@ td.bundle {
             border-radius: 4px 4px 0 0;
 
             &.ui-tabs-active, &.ui-state-hover {
-                background-color: #418940;
+                background-color: $background-color-primary;
                 border-radius: 4px 4px 0 0;
                 border: 0;
                 border-bottom-width: 0;
                 padding-bottom: 0;
 
                 a {
-                    color: #FFF;
+                    color: #000;
                 }
-
-
             }
         }
     }
@@ -2831,11 +2829,11 @@ td.bundle {
 
     .ui-state-hover {
         a {
-            color: #418940;
+            color: $green-text-color;
 
             &:link,
             &:visited {
-                color: #418940;
+                color: $green-text-color;
             }
         }
     }
@@ -2946,7 +2944,7 @@ td.bundle {
                 font-weight: normal;
                 padding-bottom: 1px;
 
-                background-color: #418940;
+                background-color: $background-color-primary;
                 border: 0;
                 border-bottom-width: 0;
 
@@ -2975,7 +2973,7 @@ td.bundle {
 
     .tabs-container {
         background: none repeat scroll 0 0 transparent;
-        border: 3px solid #418940;
+        border: 3px solid $background-color-primary;
         border-radius: 4px;
         color: #222222;
         display: block;
@@ -2988,7 +2986,7 @@ td.bundle {
         .ui-tabs-panel {
             background: #FFF none;
             border-radius: 4px;
-            border: 3px solid #418940;
+            border: 3px solid $background-color-primary;
 
             fieldset {
                 box-shadow: none;
@@ -3160,7 +3158,7 @@ nav {
 
             li {
                 display: inline;
-                color : #418940;
+                color : $green-text-color;
                 font-style: italic;
 
                 &+li::before {
@@ -3546,7 +3544,7 @@ code {
 
 .tab-content {
     background-color: #fff;
-    border: 3px solid #418940;
+    border: 3px solid $background-color-primary;
     border-radius: 4px;
     padding: 1em;
 }
@@ -3555,15 +3553,15 @@ code {
     > li {
         > a {
             background-color: #71B443;
-            color: #FFFFFF;
+            color: #111;
             line-height: 1.42857143;
             margin-right: .4em;
             padding: .5em 1em;
 
             &:hover, &:focus, &:active {
-                background-color: #418940;
+                background-color: $background-color-primary;
                 border-radius: 4px 4px 0 0;
-                border: 1px solid #418940;
+                border: 1px solid $background-color-primary;
                 padding: .5em 1em;
                 text-decoration: none;
                 color: #FFFFFF;
@@ -3574,7 +3572,7 @@ code {
             a,
             a:hover,
             a:focus {
-                background-color: #418940;
+                background-color: $background-color-primary;
                 border-radius: 4px 4px 0 0;
                 color: #FFFFFF;
                 cursor: default;
@@ -3694,7 +3692,7 @@ progress {
 
 #browse-return-to-results {
     background-color: #e6e6e6;
-    border: 1px solid lighten(#418940, 30%);
+    border: 1px solid lighten($background-color-primary, 30%);
     border-bottom-width: 0;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -3705,7 +3703,7 @@ progress {
 
 .browse-button {
     background-color: transparent;
-    border: 1px solid lighten(#418940, 30%);
+    border: 1px solid lighten($background-color-primary, 30%);
     display: block;
     overflow: hidden;
     padding: .4em .6em;
@@ -4283,7 +4281,7 @@ input.renew {
             font-weight: bold;
 
             &:hover {
-                background-color: #418940;
+                background-color: $background-color-primary;
                 color: white;
                 text-decoration: none;
             }
